kubernates-config/discovery-service.yml
# eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: docker.io/library/discovery-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
---
# eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  selector:
    app: discovery-service
  ports:
    - port: 8761
      targetPort: 8761
