kubernates-config/inventory-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  selector:
    matchLabels:
      app: inventory-service
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: docker.io/library/inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          env: # Setting Enviornmental Variables
            - name: SPRING_DATA_MONGODB_URI
              value: mongodb://root:password@mongodb:27017/generalstore?authSource=admin
