kubernates-config/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  replicas: 2
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: generalstore/product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
