kubernates-config/security-service.yml
apiVersion: v1
kind: Service
metadata:
  name: security-service
  labels:
    app: security-service
spec:
  selector:
    app: security-service
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service
spec:
  selector:
    matchLabels:
      app: security-service
  replicas: 1
  template:
    metadata:
      labels:
        app: security-service
    spec:
      containers:
        - name: security-service
          image: generalstore/security-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
